docs(perf): carry the unfinished performance work into the plan
The plan recorded this programme but not the items it inherited, which would have
been lost the moment it finished. Adds them with the reason each still matters,
and marks the two that this programme has already closed.

The most consequential is that the published figures describe JDK 17 on G1 while
the product ships JDK 25 with generational ZGC, and the newer configuration is
better on both throughput and p95. It has not been republished because the
publish step cannot push - it emits a patch and no git credentials exist on that
queue - so builds have been producing refreshes nobody applies. The default
ladder also cannot resolve the knee, so publishing mechanically would headline a
figure worse than the stale one it replaces.

Also records the per-unit status and the expected size of what remains, so the
next session can see which units are landed, which are waiting on review, and
roughly how much heap each of the outstanding ones is aimed at.